test/tests/stages/16_characters_and_strings/valid/extra_credit/char_consts_as_cases.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: i
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 65
                      None: 
                    None: 
                  Int: 
                  CStatic: 
            CS: 
              CSwitch: 
                TIdentifier: (null)
                Bool: 0
                CVar: 
                  TIdentifier: i
                  None: 
                CCompound: 
                  CB: 
                    List[5]: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstLong: 
                              TLong: 100
                            None: 
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 1
                              None: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstInt: 
                              TInt: 65
                            None: 
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 0
                              None: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstInt: 
                              TInt: 66
                            None: 
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 2
                              None: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstUInt: 
                              TUInt: 2000
                            None: 
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 3
                              None: 
                      CS: 
                        CDefault: 
                          TIdentifier: (null)
                          CReturn: 
                            CUnary: 
                              CNegate: 
                              CConstant: 
                                CConstInt: 
                                  TInt: 1
                                None: 
                              None: 
                List[0]: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
